--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "debug": "^4.1.1",
+    "enquirer": "^2.3.4",
     "jest": "^25.2.4",
     "jest-diff": "^25.2.3",
     "tslib": "^1"
