--- a/package.json
+++ b/package.json
@@ -1,59 +1,59 @@
 {
   "name": "create-app",
-  "description": "An opinionated CLI to start any Typescript, TS-React, or JS-React style project.",
-  "version": "1.0.0",
-  "author": "eddie naff",
+  "version": "0.0.1",
+  "description": "create-app CLI --An opinionated CLI to start any Typescript, TS-React, or JS-React style project.",
+  "private": true,
+  "types": "build/types/types.d.ts",
   "bin": {
-    "create-app": "./bin/run"
+    "create-app": "bin/create-app"
   },
   "bugs": "https://github.com/theednaffattack/create-app/issues",
+  "scripts": {
+    "format": "prettier --write **/*.{js,ts,tsx,json}",
+    "lint": "tslint -p .",
+    "clean-build": "rm -rf ./build",
+    "compile": "tsc -p .",
+    "copy-templates": "if [ -e ./src/templates ]; then cp -a ./src/templates ./build/; fi",
+    "build": "yarn format && yarn lint && yarn clean-build && yarn compile && yarn copy-templates",
+    "prepublishOnly": "yarn build",
+    "test": "jest",
+    "watch": "jest --watch",
+    "snapupdate": "jest --updateSnapshot",
+    "coverage": "jest --coverage"
+  },
+  "files": [
+    "tsconfig.json",
+    "tslint.json",
+    "build",
+    "LICENSE",
+    "readme.md",
+    "docs",
+    "bin"
+  ],
+  "license": "MIT",
   "dependencies": {
-    "@oclif/command": "^1",
-    "@oclif/config": "^1",
-    "@oclif/plugin-help": "^2",
-    "debug": "^4.1.1",
-    "enquirer": "^2.3.4",
-    "jest": "^25.2.4",
-    "jest-diff": "^25.2.3",
-    "tslib": "^1"
+    "app-root-path": "^3.0.0",
+    "get-installed-path": "^4.0.8",
+    "gluegun": "latest"
   },
   "devDependencies": {
-    "@oclif/dev-cli": "^1",
-    "@oclif/test": "^1.2.5",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^10",
-    "chai": "^4.2.0",
-    "eslint": "^5.13",
-    "eslint-config-oclif": "^3.1",
-    "eslint-config-oclif-typescript": "^0.1",
-    "np": "^6.2.0",
-    "ts-jest": "^25.2.1",
-    "ts-node": "^8",
-    "typescript": "^3.3"
+    "@types/app-root-path": "^1.2.4",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.11",
+    "jest": "^24.1.0",
+    "prettier": "^1.12.1",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.6.3"
   },
   "engines": {
     "node": ">=8.0.0"
   },
-  "files": [
-    "/bin",
-    "/lib"
-  ],
-  "homepage": "https://github.com/theednaffattack/create-app",
-  "keywords": [
-    "oclif"
-  ],
-  "license": "MIT",
-  "main": "lib/index.js",
-  "oclif": {
-    "bin": "create-app",
-    "commands": "./lib/commands"
-  },
-  "repository": "theednaffattack/create-app",
-  "scripts": {
-    "posttest": "eslint . --ext .ts --config .eslintrc",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev readme",
-    "test": "echo NO TESTS",
-    "version": "oclif-dev readme && git add README.md"
-  },
-  "types": "lib/index.d.ts"
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  }
 }
