--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-*-debug.log
-*-error.log
-/.nyc_output
-/dist
-/lib
-/package-lock.json
-/tmp
+.DS_Store
 node_modules
-old
+npm-debug.log
+coverage
+.nyc_output
+dist
+build
+.vscode
