Add changes to lint settings

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "bugs": "https://github.com/theednaffattack/create-app/issues",
   "scripts": {
     "format": "prettier --write **/*.{js,ts,tsx,json}",
-    "lint": "tslint -p .",
+    "lint": "eslint . --ext .ts",
     "clean-build": "rm -rf ./build",
     "compile": "tsc -p .",
     "copy-templates": "if [ -e ./src/templates ]; then cp -a ./src/templates ./build/; fi",
@@ -40,6 +40,11 @@
     "@types/app-root-path": "^1.2.4",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.11",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.1.0",
     "prettier": "^1.12.1",
     "ts-jest": "^24.1.0",
