--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "declarationDir": "build/types"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "src/scaffolds"]
+  "exclude": ["node_modules", "src/scaffolds", "../../node_modules"]
 }
