Fix jest / mocha compiler bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "es2015.iterable",
       "dom"
     ],
+    "types": ["node"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": false,
