--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "declarationDir": "build/types"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "src/scaffolds", "../../node_modules"]
+  "exclude": ["node_modules", "src/scaffolds"]
 }
